<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qdS-SZ-1p8">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aVo-7a-Rtx">
                                <rect key="frame" x="70" y="198" width="235" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernametextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-7J-R8H">
                                <rect key="frame" x="70" y="295" width="235" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordtextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUL-QW-MIX">
                                <rect key="frame" x="164" y="413" width="47" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginbutton"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonWasTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CUi-Hm-3Jg"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="aVo-7a-Rtx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="134" id="3az-He-EWK"/>
                            <constraint firstItem="TBJ-7J-R8H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="4CY-c7-44p"/>
                            <constraint firstItem="TBJ-7J-R8H" firstAttribute="top" secondItem="aVo-7a-Rtx" secondAttribute="bottom" constant="67" id="9gn-9l-ESl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aVo-7a-Rtx" secondAttribute="trailing" constant="70" id="CSU-Sg-Abj"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TBJ-7J-R8H" secondAttribute="trailing" constant="70" id="FYD-zF-Ad3"/>
                            <constraint firstItem="aVo-7a-Rtx" firstAttribute="centerX" secondItem="IUL-QW-MIX" secondAttribute="centerX" id="JbK-xT-LC5"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IUL-QW-MIX" secondAttribute="bottom" constant="224" id="Yct-6Q-LA6"/>
                            <constraint firstItem="IUL-QW-MIX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="164" id="kln-yx-qaY"/>
                            <constraint firstItem="aVo-7a-Rtx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="o2q-kS-Nj6"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="BSh-4m-5Jg"/>
                    <connections>
                        <outlet property="passwordTextField" destination="TBJ-7J-R8H" id="MyY-oz-8Sp"/>
                        <outlet property="userNameTextField" destination="aVo-7a-Rtx" id="GeQ-lF-0i6"/>
                        <segue destination="4Hb-Md-TNb" kind="show" identifier="loginSuccess" id="MRx-zQ-0Fq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1079.2" y="119.1904047976012"/>
        </scene>
        <!--Music View Controller-->
        <scene sceneID="rF6-kO-tLi">
            <objects>
                <viewController id="4Hb-Md-TNb" customClass="MusicViewController" customModule="LabTunes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="SDQ-Im-05G">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wx8-7L-pXQ">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="dataSource" destination="4Hb-Md-TNb" id="Q4Q-Bs-7Ks"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MusicView"/>
                        <constraints>
                            <constraint firstItem="KAF-Ow-qbf" firstAttribute="trailing" secondItem="wx8-7L-pXQ" secondAttribute="trailing" id="FHH-dc-Zvr"/>
                            <constraint firstItem="wx8-7L-pXQ" firstAttribute="top" secondItem="KAF-Ow-qbf" secondAttribute="top" id="nQ3-63-jRd"/>
                            <constraint firstItem="wx8-7L-pXQ" firstAttribute="leading" secondItem="KAF-Ow-qbf" secondAttribute="leading" id="qc4-fK-j9x"/>
                            <constraint firstItem="KAF-Ow-qbf" firstAttribute="bottom" secondItem="wx8-7L-pXQ" secondAttribute="bottom" id="sPs-4h-dtQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="KAF-Ow-qbf"/>
                    </view>
                    <connections>
                        <outlet property="tableView" destination="wx8-7L-pXQ" id="zJk-0E-WEI"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cXl-Cm-Ape" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2080" y="115"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Ovm-d0-BNc">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qdS-SZ-1p8" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cdk-By-VMr">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="C0P-VB-ouX"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1KW-7n-cIN" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="140" y="119.1904047976012"/>
        </scene>
    </scenes>
</document>
